Added Router Options

--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -1,5 +1,13 @@
 <div class="container">
     <div class="inner-container">
-
+        <div class="row">
+            <div class="col">
+                <span> {{ this.localeService.brandLocale| translate }} </span>
+            </div>
+            <div class="col">
+                <fa-icon [icon]="this.iconService.languageIcon"></fa-icon>
+                <fa-icon [icon]="this.iconService.themeIcon"></fa-icon>
+            </div>
+        </div>
     </div>
 </div>
