--- a/src/app/layout/components/navbar/navbar.component.scss
+++ b/src/app/layout/components/navbar/navbar.component.scss
@@ -5,13 +5,24 @@
     .inner-container {
         width: inherit;
         height: inherit;
-        padding: 16px 20px;
+        padding: 24px 28px;
 
         .row {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
+
+            .col {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 16px;
+
+                fa-icon {
+                    cursor: pointer;
+                }
+            }
         }
     }
 }
