--- a/src/app/public/user/routes/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/public/user/routes/authentication/components/sign-in/sign-in.component.html
@@ -1,17 +1,19 @@
 <div class="container">
     <div class="inner-container">
-        <form (ngSubmit)="save()" [formGroup]="this.formGroup">
+        <form [formGroup]="this.formGroup">
             <div class="form-control">
-                <label for="email"> {{ "" | translate }} </label>
+                <label for="email"> {{ this.authenticationLocaleService.emailLocale | translate }} </label>
                 <input type="email" formControlName="email">
             </div>
             <div class="form-control">
-                <label for="password"> {{ "" | translate }} </label>
+                <label for="password"> {{ this.authenticationLocaleService.passwordLocale | translate }} </label>
                 <input type="password" formControlName="password">
             </div>
             <div class="form-divider"></div>
             <div class="form-action">
-                <button type="submit"> {{ "" | translate }}</button>
+                <button type="submit" [disabled]="this.isValid()" (click)="this.save()"> {{
+                    this.authenticationLocaleService.emailLocale | translate
+                    }}</button>
             </div>
         </form>
     </div>
