--- a/src/app/public/user/routes/authentication/components/sign-in/sign-in.component.scss
+++ b/src/app/public/user/routes/authentication/components/sign-in/sign-in.component.scss
@@ -10,16 +10,47 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 16px;
+            gap: 24px;
+            padding: 24px 28px;
 
             .form-control {
                 display: flex;
                 flex-direction: column;
-                gap: 8px;
+                gap: 12px;
+                width: 100%;
 
-                .label {
-                    padding: 16px 20px;
+                label {
+                    font-size: 12px;
+                    letter-spacing: 0.5px;
+                }
 
+                input {
+                    padding: 12px 16px;
+                    border: none;
+                    border-radius: 2px;
+                    letter-spacing: 0.5px;
+                    font-size: 12px;
+                }
+            }
+
+            .form-divider {
+                width: 100%;
+                background-color: lightgray;
+                height: 0.5px;
+            }
+
+            .form-action {
+                width: 100%;
+
+                button {
+                    width: inherit;
+                    padding: 12px 16px;
+                    background-color: inherit;
+                    border: 0;
+                    box-shadow: 0px 0px 4px 0.5px lightgray;
+                    border-radius: 2px;
+                    letter-spacing: 0.5px;
+                    font-size: 12px;
                 }
             }
         }
